:bug: Fix Menu collapsed jumping
close #21301

--- a/components/style/mixins/clearfix.less
+++ b/components/style/mixins/clearfix.less
@@ -1,6 +1,11 @@
 // mixins for clearfix
 // ------------------------
 .clearfix() {
+  // https://github.com/ant-design/ant-design/issues/21301#issuecomment-583955229
+  &::before {
+    display: table;
+    content: '';
+  }
   &::after {
     display: block;
     clear: both;
